add home template and top products card

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,13 +29,7 @@
 </div>
 
 <section class="content">
-    <div class="jumbotron">
-          <h1 class="display-4">Hello, world!</h1>
-          <p class="lead">This is a fake product showcase page utilising <a href="https://fakestoreapi.com/">fakestoreapi.com</a>.</p>
-          <hr class="my-4">
-          <p>It's great because it requires me not to do any data prep and focus on the front end before I can figure a data back-end I can plug into.</p>
-          <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-    </div>
+    {% block content %}{% endblock %}
 </section>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
