--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-    <title>{% block title %}{% endblock %} - Flaskr</title>
+    <title>{% block title %}{% endblock %} - My Test Store</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
     <meta charset="utf-8">
@@ -8,25 +8,24 @@
 </head>
 <body>
 
-<div class="containter">
-    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-primary">
-      <a class="navbar-brand" href="#">Product categoorays</a>
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-primary">
+  <a class="navbar-brand" href="#">Product categoorays</a>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                {% for category in categoriesList %}
-                    <li class="nav-item active">
-                        <a class="nav-link" href="{{ url_for('category', selected_cat=category) }}">{{ category.capitalize() }}<span class="sr-only">(current)</span></a>
-                    </li>
-                {% endfor %}
-            </ul>
-        </div>
-    </nav>
-</div>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            {% for category in categoriesList %}
+                <li class="nav-item active">
+                    <a class="nav-link" href="{{ url_for('category', selected_cat=category) }}">{{ category.capitalize() }}<span class="sr-only">(current)</span></a>
+                </li>
+            {% endfor %}
+        </ul>
+    </div>
+</nav>
+
 
 <section class="content">
     {% block content %}{% endblock %}
