--- a/templates/category.html
+++ b/templates/category.html
@@ -10,14 +10,15 @@
                 <div class="card w-100" style="width: 18rem;">
                     <div class="row no-gutters">
                         <div class="col-md-4">
-                            <img src={{ product['image'] }} class="card-img-top h-75 w-75" alt="...">
+                            <img src="{{ product['image'] }}" class="card-img-top h-75 w-75" alt="...">
                         </div>
                         <div class="col-md-8">
                           <div class="card-body">
                             <h5 class="card-title">{{ product['title'] }}</h5>
                               <p class="card-text">
                                 <h1><span class="badge badge-secondary">{{ product['price'] }}€</span></h1>
-                                {{ product['description']}}</p>
+                                {{ product['description']}}
+                              </p>
                             <a href="#" class="btn btn-success">View product</a>
                           </div>
                         </div>
