--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -18,7 +18,7 @@
                   <div class="card-body">
                     <h5 class="card-title">{{ product['title'] }}</h5>
                     <p class="card-text">{{ product['description'][:99]+"..." }}</p>
-                    <a href="#" class="btn btn-success">View product</a>
+                    <a href="{{ url_for('product', selected_prod_id=product['id']) }}" class="btn btn-success">View product</a>
                     <a href="{{ url_for('category', selected_cat=product['category']) }}" class="btn btn-info">See related</a>
                   </div>
                 </div>
