--- a/templates/base.html
+++ b/templates/base.html
@@ -17,19 +17,26 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            {% for category in categoriesList %}
-                <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for('category', selected_cat=category) }}">{{ category.capitalize() }}<span class="sr-only">(current)</span></a>
-                </li>
-            {% endfor %}
+
         </ul>
     </div>
 </nav>
 
+<div class="row">
+    <div class="col-2">
+        <nav class="nav flex-column">
+            {% for category in categoriesList %}
+                <a class="nav-link" href="{{ url_for('category', selected_cat=category) }}">{{ category.capitalize() }}<span class="sr-only">(current)</span></a>
+            {% endfor %}
+        </nav>
+    </div>
 
-<section class="content">
-    {% block content %}{% endblock %}
-</section>
+    <div class="col-10">
+        <section class="content">
+            {% block content %}{% endblock %}
+        </section>
+    </div>
+</div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
