move jumbotron to wrap around all site contents instead of inside homepage.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,9 @@
 
     <div class="col-10">
         <section class="content">
-            {% block content %}{% endblock %}
+            <div class="jumbotron">
+                {% block content %}{% endblock %}
+            </div>
         </section>
     </div>
 </div>
