--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 <body>
 
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand" href="#">Product categoorays</a>
+  <a class="navbar-brand" href="{{ url_for('home')}}">My Test Store</a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -17,14 +17,23 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-
+            <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://github.com/Lewandowski-commits/fake-store-in-flask">GitHub repo</a>
+            </li>
         </ul>
     </div>
 </nav>
 
 <div class="row">
     <div class="col-2">
-        <nav class="nav flex-column">
+        <nav class="nav-item">
+            <h5 class="text-center">Product categories</h5>
             {% for category in categoriesList %}
                 <a class="nav-link" href="{{ url_for('category', selected_cat=category) }}">{{ category.capitalize() }}<span class="sr-only">(current)</span></a>
             {% endfor %}
